Part way through rewrite before checking
