# swagger.yml
@@ -1,7 +1,9 @@
+# swagger.yml
+
 openapi: 3.0.0
 info:
   title: "RP Flask REST API"
-  description: "An API about trails"
+  description: "An API about people and notes"
   version: "1.0.0"
 
 servers:
@@ -12,113 +14,144 @@ components:
     Trail:
       type: "object"
       required:
-        - Trail_Name
+        - trail_Name
       properties:
-        Trail_Name:
+        trail_Name:
           type: "string"
-        Trail_Summary:
-          type: "string"
-        Trail_Description:
-          type: "string"
-        Difficulty:
-          type: "string"
-        Location:
-          type: "string"
-        Length:
-          type: "number"
-          format: "float"
-        Elevation_gain:
-          type: "number"
-          format: "float"
-        Route_type:
-          type: "string"
-        OwnerID:
-          type: "integer"
-        Pt1_Lat:
-          type: "number"
-          format: "float"
-        Pt1_Long:
-          type: "number"
-          format: "float"
-        Pt1_Desc:
-          type: "string"
-        Pt2_Lat:
-          type: "number"
-          format: "float"
-        Pt2_Long:
-          type: "number"
-          format: "float"
-        Pt2_Desc:
+        trail_Description:
           type: "string"
   parameters:
-    Trail_Name:
-      name: "Trail_Name"
-      description: "Name of the trail"
+    trail_Name:
+      name: "trail_Name"
+      description: "Name of the Trail to get"
       in: path
-      required: true
+      required: True
       schema:
         type: "string"
+
 
 paths:
   /trails:
     get:
-      operationId: "Trail.read_all"  # Correct operation ID
+      operationId: "trails.read_all"
       tags:
-        - "Trails"
-      summary: "Read the list of trails"
+        - "People"
+      summary: "Read the list of people"
       responses:
         "200":
-          description: "Successfully read trails list"
+          description: "Successfully read people list"
     post:
-      operationId: "Trail.create"  # Correct operation ID
+      operationId: "people.create"
       tags:
-        - "Trails"
-      summary: "Create a new trail"
+        - People
+      summary: "Create a person"
       requestBody:
-        description: "Trail to create"
-        required: true
-        content:
-          application/json:
-            schema:
-              x-body-name: "trail"
-              $ref: "#/components/schemas/Trail"
+          description: "Person to create"
+          required: True
+          content:
+            application/json:
+              schema:
+                x-body-name: "person"
+                $ref: "#/components/schemas/Person"
       responses:
         "201":
-          description: "Successfully created trail"
-  /trails/{Trail_Name}:
+          description: "Successfully created person"
+  /people/{lname}:
     get:
-      operationId: "Trail.read_one"  # Correct operation ID
+      operationId: "people.read_one"
       tags:
-        - "Trails"
-      summary: "Read one trail"
+        - People
+      summary: "Read one person"
       parameters:
-        - $ref: "#/components/parameters/Trail_Name"
+        - $ref: "#/components/parameters/lname"
       responses:
         "200":
-          description: "Successfully read trail"
+          description: "Successfully read person"
     put:
       tags:
-        - "Trails"
-      operationId: "Trail.update"  # Correct operation ID
-      summary: "Update a trail"
+        - People
+      operationId: "people.update"
+      summary: "Update a person"
       parameters:
-        - $ref: "#/components/parameters/Trail_Name"
+        - $ref: "#/components/parameters/lname"
       responses:
         "200":
-          description: "Successfully updated trail"
+          description: "Successfully updated person"
       requestBody:
         content:
           application/json:
             schema:
-              x-body-name: "trail"
-              $ref: "#/components/schemas/Trail"
+              x-body-name: "person"
+              $ref: "#/components/schemas/Person"
     delete:
       tags:
-        - "Trails"
-      operationId: "Trail.delete"  # Correct operation ID
-      summary: "Delete a trail"
+        - People
+      operationId: "people.delete"
+      summary: "Delete a person"
       parameters:
-        - $ref: "#/components/parameters/Trail_Name"
+        - $ref: "#/components/parameters/lname"
       responses:
         "204":
-          description: "Successfully deleted trail"
+          description: "Successfully deleted person"
+  /notes:
+    post:
+      operationId: "notes.create"
+      tags:
+        - Notes
+      summary: "Create a note associated with a person"
+      requestBody:
+          description: "Note to create"
+          required: True
+          content:
+            application/json:
+              schema:
+                x-body-name: "note"
+                type: "object"
+                properties:
+                  person_id:
+                    type: "integer"
+                  content:
+                    type: "string"
+      responses:
+        "201":
+          description: "Successfully created a note"
+  /notes/{note_id}:
+    get:
+      operationId: "notes.read_one"
+      tags:
+        - Notes
+      summary: "Read one note"
+      parameters:
+        - $ref: "#/components/parameters/note_id"
+      responses:
+        "200":
+          description: "Successfully read one note"
+    put:
+      tags:
+        - Notes
+      operationId: "notes.update"
+      summary: "Update a note"
+      parameters:
+        - $ref: "#/components/parameters/note_id"
+      responses:
+        "200":
+          description: "Successfully updated note"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              x-body-name: "note"
+              type: "object"
+              properties:
+                content:
+                  type: "string"
+    delete:
+      tags:
+        - Notes
+      operationId: "notes.delete"
+      summary: "Delete a note"
+      parameters:
+        - $ref: "#/components/parameters/note_id"
+      responses:
+        "204":
+          description: "Successfully deleted note"
